# bf-math

./: .gitignore  README.md
bfMath/: bfMath.vcxproj  bfMath.vcxproj.filters  matrix-usage.hpp  rgba.hpp  scalar.hpp  stpq.hpp  swizzle.hpp  vector-definition.hpp  vector-operation.hpp  vector-operator.hpp  vector-storage.hpp  vector-usage.hpp  vector.hpp  xyzw.hpp
cmake/: CMakeLists.txt  main.cpp
header/: matrix-storage.hpp  matrix-usage.hpp  quaternion.hpp  rotation.hpp  swizzle.hpp  transform.hpp  vector-storage.hpp  vector-usage.hpp  vector.hpp
test/: main.cpp  test.sln  test.vcxproj
vs2013/: bf-math.vcxproj  bf-math.vcxproj.filters  main.cpp  test.sln  test.vcxproj
vs2017/: bf-math.vcxproj  bf-math.vcxproj.filters  main.cpp  test.vcxproj
